--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,4 +1,10 @@
 extends layouts/main.pug
 
 block content
-    p Change Password
+    .form-container
+        form(action=`/users${routes.changePassword}`, method="post")
+            input(type="password", name="oldPassword" placeholder="current Password")
+            input(type="password", name="newPassword" placeholder="new Password")
+            input(type="password", name="newPassword1" placeholder="Verify New Password")
+            input(type="submit", value="Change Password")
+            
