--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,13 @@
-extends layouts/main.pug
+extends layouts/main
+include mixins/videoBlock
 
 block content
     .videos
         each video in videos
-            h1= video.title
+            +videoBlock(
+                {
+                    title:video.title,
+                    views:video.views,
+                    videoFile:video.videoFile
+                }
+            )
