--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,7 @@ block content
         each video in videos
             +videoBlock(
                 {
+                    id:video.id,
                     title:video.title,
                     views:video.views,
                     videoFile:video.videoFile
