--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,5 +1,6 @@
 mixin videoBlock(video={})
     .videoBlock
-        video.videoBlock__thubnail(src=video.videoFile, controls=true)
-        h4.videoBlock__title=video.title
-        h6.videoBlock__views=video.views
+        a(href=routes.videoDetail(video.id))
+            video.videoBlock__thubnail(src=video.videoFile, controls=true)
+            h4.videoBlock__title=video.title
+            h6.videoBlock__views=video.views
