--- a/views/search.pug
+++ b/views/search.pug
@@ -1,5 +1,18 @@
-extends layouts/main.pug
-
+extends layouts/main
+include mixins/videoBlock
 block content
     .search__header
         h3 Searching by : #{searchingBy}
+        
+    .search__videos
+        .videos
+            each video in videos
+                .search__video
+                    +videoBlock(
+                        {
+                            id:video.id,
+                            title:video.title,
+                            views:video.views,
+                            videoFile:video.videoFile
+                        }
+                    )
