--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,9 +2,9 @@ extends layouts/main.pug
 
 block content
     .form-container
-        form(action=`/videos${routes.upload}`, method="post")
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
             label(for="file") Video File
-            input(type="file", name="file", id="file" required)
+            input(type="file", name="videoFile", id="file" required, accept="video/*")
             input(type="text", placeholder="title", name="title" required)
             textarea(name="description", placeholder="Description", cols="30", rows="10" required)
             input(type="submit", value="Upload Video")
