--- a/views/home.pug
+++ b/views/home.pug
@@ -9,6 +9,6 @@ block content
                     id:video.id,
                     title:video.title,
                     views:video.views,
-                    videoFile:video.videoFile
+                    videoFile:video.fileUrl
                 }
             )
