--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    .videos
+    .home-videos
         each video in videos
             +videoBlock(
                 {
@@ -12,3 +12,36 @@ block content
                     videoFile:video.fileUrl
                 }
             )
+            +videoBlock(
+                {
+                    id:video.id,
+                    title:video.title,
+                    views:video.views,
+                    videoFile:video.fileUrl
+                }
+            )
+            +videoBlock(
+                {
+                    id:video.id,
+                    title:video.title,
+                    views:video.views,
+                    videoFile:video.fileUrl
+                }
+            )
+            +videoBlock(
+                {
+                    id:video.id,
+                    title:video.title,
+                    views:video.views,
+                    videoFile:video.fileUrl
+                }
+            )
+            +videoBlock(
+                {
+                    id:video.id,
+                    title:video.title,
+                    views:video.views,
+                    videoFile:video.fileUrl
+                }
+            )
+            
