--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,13 @@
-body {
-    background-color: red;
-}
+@import "config/_variables.scss";
+@import "config/reset.scss";
+@import "main.scss";
+
+@import "partials/header.scss";
+@import "partials/footer.scss";
+@import "partials/form.scss";
+@import "partials/socialLogin.scss";
+@import "partials/videoBlock.scss";
+@import "partials/videoPlayer.scss";
+
+@import "pages/home.scss";
+@import "pages/videoDetail.scss";
