--- a/views/login.pug
+++ b/views/login.pug
@@ -7,3 +7,4 @@ block content
                 input(type="email", name="email", placeholder="Email")
                 input(type="password", name="password", placeholder="Password")
                 input(type="submit", value="Log In")
+            include partial/socialLogin
