--- a/views/partial/socialLogin.pug
+++ b/views/partial/socialLogin.pug
@@ -1,9 +1,11 @@
-.social__login
+.social-login
     button.social-login--github
-       span
-            i.fab.fa-github 
-       |&nbsp;Continue with Github
+        a(href=routes.gitHub)
+            span
+                i.fab.fa-github 
+            |Continue with Github
     button.social-login--facebook
-       span
-            i.fab.fa-facebook 
-       |&nbsp;Continue with Facebook       
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook 
+            |Continue with Facebook      
